--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'org.jetbrains.kotlin.jvm'
+	id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.24'
+
 }
 
 group = 'com.ademozalp'
@@ -29,6 +31,9 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
+
 
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.jetbrains.kotlin:kotlin-reflect'
