--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,9 @@ spring.data.redis.lettuce.pool.max-idle=8
 spring.data.redis.lettuce.pool.min-idle=8
 
 spring.cache.type=redis
-spring.cache.redis.time-to-live=600000ms
+spring.cache.redis.time-to-live=600000
 spring.cache.redis.cache-null-values=false
 
 server.port=8080
-
 
 
