--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+//	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
