--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
+# APPLICATION
+server.port=8089
 spring.application.name=redis-cache
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/redis-cache
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# DATASOURCE
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+# REDIS
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
 spring.data.redis.timeout=10000ms
 spring.data.redis.lettuce.pool.max-active=8
 spring.data.redis.lettuce.pool.max-wait=-1
@@ -18,7 +21,3 @@ spring.data.redis.lettuce.pool.min-idle=8
 spring.cache.type=redis
 spring.cache.redis.time-to-live=30
 spring.cache.redis.cache-null-values=false
-
-server.port=8080
-
-
